# pm

./: CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: ralph-loop.local.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  boards.py  db.py  main.py  services.py  users.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_boards.py  test_health.py  test_migration.py
docs/: DATABASE.md  PLAN.md  code_review.md  review.md  schema.json
frontend/: AGENTS.md  package-lock.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AiSidebar.test.tsx  AiSidebar.tsx  BoardSwitcher.tsx  CardEditModal.tsx  Icons.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginPage.test.tsx  LoginPage.tsx  NewCardForm.tsx  ProfileModal.tsx
frontend/src/lib/: api.ts  auth.ts  kanban.ts
frontend/tests/: ai-chat.spec.ts  auth.spec.ts  helpers.ts  kanban.spec.ts  multi-board.spec.ts  persistence.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh  test-e2e.sh
