[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management App backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "openai>=1.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "pytest-cov>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
